# openfv

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSES.md  PROJECT_PLAN.md  README.md  TASKS.md  versions.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dco.yml  nightly.yml  seed-circt-cache.yml
build-templates/: README.md
build-templates/btor2-emit/: CMakeLists.txt
build-templates/btor2-emit/tools/btor2-emit-opt/: CMakeLists.txt  btor2-emit-opt.cpp
build-templates/rtl-lowering/: CMakeLists.txt
build-templates/rtl-lowering/tools/rtl-lowering-opt/: CMakeLists.txt  rtl-lowering-opt.cpp
build-templates/sva-frontend/: CMakeLists.txt
build-templates/sva-frontend/tools/sva-frontend-opt/: CMakeLists.txt  sva-frontend-opt.cpp
cmake/: OpenfvCIRCT.cmake  OpenfvVersions.cmake
docs/: BUILDING.md
docs/specs/: README.md  check_specs.py  cli.md  locmap-0.1.schema.json  locmap.md  result-0.1.schema.json  result.md  witness.md
docs/specs/examples/: fifo.locmap.json  fifo.result.json
openfv_cli/: __init__.py  errors.py  filelist.py  frontend.py  main.py
scripts/: bootstrap-circt.sh  bootstrap-engines.sh
tests/cli/: run_tests.sh
tests/cli/fixtures/: broken.f  broken.sv  tiny.f  tiny.sv
